# r-index

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  bench_bwt.cpp  bench_wt.cpp  benchmark.cpp  dm.sh  dm12.sh  dm24.sh  dm6.sh  dms.sh  generate_random_text.cpp  generate_stats.cpp  generate_structures.cpp  run.sh
include/: bwt.hpp  r-index.hpp  r_index_alx.hpp  r_index_prezza.hpp  r_index_subsampled.hpp  wavelet_tree.hpp  wt_naive.hpp
include/util/: bit_vector.hpp  io.hpp  rank.hpp  spacer.hpp  timer.hpp
test/: CMakeLists.txt  bwt_test.cpp  pred_test.cpp  rindex_test.cpp  uint40_test.cpp  wt_pasta_test.cpp  wt_test.cpp
